--- a/src/app/details-phishing/details-phishing.component.html
+++ b/src/app/details-phishing/details-phishing.component.html
@@ -3,9 +3,9 @@
         <app-header2></app-header2>
     </div>
     <img class="pic" src='../../assets/details.png' alt="details">
-    <button routerLink="/alert-ddos"><img class="back" src='../../assets/back.png' alt="back"></button>
+    <button routerLink="/alert-phishing"><img class="back" src='../../assets/back.png' alt="back"></button>
     <div class="body">
-        <h1>Alert Details - DDOS Attack Detected</h1>
+        <h1>Alert Details - Phishing Attack Detected</h1>
         <div class="content">
             <div class="info1">
                 <h2>Attack Details</h2>
