--- a/src/app/alert-phishing/alert-phishing.component.html
+++ b/src/app/alert-phishing/alert-phishing.component.html
@@ -8,7 +8,7 @@
         <div class="title-text">Phishing Attack Detected!</div>
         <div class="explanation-text">A potential phishing attack has been identified. Immediate attention is required.</div>
         <div class="buttons-container">
-            <button routerLink="/details" class="button">View Details</button>
+            <button routerLink="/details-phishing" class="button">View Details</button>
             <button class="button">Search Attack</button>
             <button routerLink="/phishing" class="button">Ignore Alert</button>
         </div>
